--- a/src/__masters.pug
+++ b/src/__masters.pug
@@ -53,157 +53,182 @@ mixin mastersBox
         .mastersBox__itemInfo
           .mastersBox__itemInfoTitle Гольбрайх Геннадий Ефимович
           .mastersBox__itemInfoDesc Главный врач
-    .mastersBox__itemOuter.visible(data-sid='17,18,19,21')
+    .mastersBox__itemOuter.hidden(data-sid='17,18,19,21')
       a.mastersBox__item(href='#')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Чумакова Ольга Владимировна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Чумакова Ольга Владимировна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.visible(data-sid='17,18,19,20,21')
       a.mastersBox__item(href='#')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Жукова Светлана Юрьевна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Жукова Светлана Юрьевна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.visible(data-sid='17,18,19,20,21')
       a.mastersBox__item(href='#')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Солод Екатерина Олеговна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Солод Екатерина Олеговна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.visible(data-sid='17,18,19,20,21')
       a.mastersBox__item(href='#')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Спирина Виктория Геннадьевна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Спирина Виктория Геннадьевна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.visible(data-sid='17,18,19,21,22')
       a.mastersBox__item(href='kuzneczova-tatyana-alekseevna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Кузнецова Татьяна Алексеевна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Кузнецова Татьяна Алексеевна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.visible(data-sid='17,18,19,21,25,201')
       a.mastersBox__item(href='xrapova-svetlana-leonidovna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Храпова Светлана Леонидовна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Храпова Светлана Леонидовна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.hidden(data-sid='17,18,19')
       a.mastersBox__item(href='gorohova/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Горохова Марина Сергеевна
-          span Врач-косметолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Горохова Марина Сергеевна
+          .mastersBox__itemInfoDesc Врач-косметолог
     .mastersBox__itemOuter.hidden(data-sid='17,19,20')
       a.mastersBox__item(href='pichugina-kseniya-sergeevna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Пичугина Ксения Сергеевна
-          span врач-диетолог, физиотерапевт 
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Пичугина Ксения Сергеевна
+          .mastersBox__itemInfoDesc врач-диетолог, физиотерапевт 
     .mastersBox__itemOuter.hidden(data-sid='20')
       a.mastersBox__item(href='alimbekova-elmira/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Алимбекова Эльмира
-          span SPA-Технолог, Косметик-Эстетист.
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Алимбекова Эльмира
+          .mastersBox__itemInfoDesc SPA-Технолог, Косметик-Эстетист.
     .mastersBox__itemOuter.hidden(data-sid='24')
       a.mastersBox__item(href='malyishko-mariya/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Малышко Мария
-          span Стилист-колорист
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Малышко Мария
+          .mastersBox__itemInfoDesc Стилист-колорист
     .mastersBox__itemOuter.hidden(data-sid='24,25')
       a.mastersBox__item(href='sarkisyan-narek/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Саркисян Нарек
-          span Стилист-колорист международного класса
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Саркисян Нарек
+          .mastersBox__itemInfoDesc Стилист-колорист международного класса
     .mastersBox__itemOuter.hidden(data-sid='24')
       a.mastersBox__item(href='bobrova-ekaterina/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Боброва Екатерина
-          span Стилист-колорист
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Боброва Екатерина
+          .mastersBox__itemInfoDesc Стилист-колорист
     .mastersBox__itemOuter.hidden(data-sid='24,25')
       a.mastersBox__item(href='ruzavina-marina/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Рузавина Марина
-          span Стилист-колорист
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Рузавина Марина
+          .mastersBox__itemInfoDesc Стилист-колорист
     .mastersBox__itemOuter.hidden(data-sid='23,55')
       a.mastersBox__item(href='marina-olga/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Марьина Ольга
-          span
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Марьина Ольга
+          .mastersBox__itemInfoDesc
             | Специалист маникюра и педикюра, Спа-специалист: массажист, медицинская сестра по массажу
     .mastersBox__itemOuter.hidden(data-sid='23,55')
       a.mastersBox__item(href='simonova-mariya/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Симонова Мария
-          span Специалист маникюра и педикюра
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Симонова Мария
+          .mastersBox__itemInfoDesc Специалист маникюра и педикюра
     .mastersBox__itemOuter.hidden(data-sid='23,55')
       a.mastersBox__item(href='toshheva-anastasiya/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Тощева Анастасия
-          span Специалист маникюра и педикюра
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Тощева Анастасия
+          .mastersBox__itemInfoDesc Специалист маникюра и педикюра
     .mastersBox__itemOuter.hidden(data-sid='23,55')
       a.mastersBox__item(href='zajczeva-svetlana/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Зайцева Светлана
-          span Специалист маникюра и педикюра
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Зайцева Светлана
+          .mastersBox__itemInfoDesc Специалист маникюра и педикюра
     .mastersBox__itemOuter.hidden(data-sid='23,55')
       a.mastersBox__item(href='nechaeva-svetlana-evgenevna/')
-        img(src='assets/img/sotr/chumakova-olga.jpgg' alt='')
-        span.mastersBox__info
-          span Нечаева Светлана Евгеньевна
-          span Специалист маникюра и педикюра
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Нечаева Светлана Евгеньевна
+          .mastersBox__itemInfoDesc Специалист маникюра и педикюра
     .mastersBox__itemOuter.hidden(data-sid='23')
       a.mastersBox__item(href='zhdanova-anna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Жданова Анна
-          span Специалист маникюра и педикюра
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Жданова Анна
+          .mastersBox__itemInfoDesc Специалист маникюра и педикюра
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='rechenko-marina/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Реченко Марина
-          span Администратор
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Реченко Марина
+          .mastersBox__itemInfoDesc Администратор
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='tihomirova-maria/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Тихомирова Мария
-          span Администратор
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Тихомирова Мария
+          .mastersBox__itemInfoDesc Администратор
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='sheluxina-irina/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Филиппова Екатерина
-          span Администратор
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Филиппова Екатерина
+          .mastersBox__itemInfoDesc Администратор
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='filimonova-irina-sergeevna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Филимонова Ирина Сергеевна
-          span Управляющий центра косметологии 
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Филимонова Ирина Сергеевна
+          .mastersBox__itemInfoDesc Управляющий центра косметологии 
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='shushpannikova-irina-sergeevna/')
-        img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
-        span.mastersBox__info
-          span Шушпанникова Ирина Сергеевна
-          span Управляющий имиджевым центром
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/chumakova-olga.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Шушпанникова Ирина Сергеевна
+          .mastersBox__itemInfoDesc Управляющий имиджевым центром
     .mastersBox__itemOuter.hidden(data-sid='62')
       a.mastersBox__item(href='#')
-        img(src='assets/img/sotr/shelest-360х600.jpg' alt='')
-        span.mastersBox__info
-          span Шелухина Ирина
-          span Мега-маркетолог
+        .mastersBox__itemImg
+          img(src='assets/img/sotr/shelest-360х600.jpg' alt='')
+        .mastersBox__itemInfo
+          .mastersBox__itemInfoTitle Шелухина Ирина
+          .mastersBox__itemInfoDesc Мега-маркетолог
 
 
 
