--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,7 @@ include __newsInMain
 include __forms
 include __footer
 include __menuBottom1
+include __callback
 
 
 
@@ -70,6 +71,8 @@ html(lang="ru-RU")
 
     +menuBottom1_main
     +hideBox
+
+    +callback
     
     +scripts
     
