--- a/src/__card.pug
+++ b/src/__card.pug
@@ -1,115 +1,183 @@
 mixin card3
-  
-      .card3
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Омоложение
-              .card3__itemInfoContent
-                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
-                ul
-                  li Лифтинг
-                  li Морщины
-                  li Подтяжка 
-                  li Контур лица
-              .card3__priceBtn
-                i.icon-rrubles
-            .innerPriceBox3__wrapper
-              .innerPriceBox3__overlay 
-                .innerPriceBox3.colorBox_e
-                  .innerPriceBox3__header
-                    .innerPriceBox3__title Лазерная эпиляция Candela
-                    .innerPriceBox3__close
-                      i.icon-close2021
-                  .innerPriceBox3__content.xScroll2 
-                    .priceBox3__area
-                      .priceBox3__title
-                        h3 Название прайса
-                      .priceBox3
-                        table
-                          tbody
-                            tr
-                              td Лазерная эпиляция: подбородок
-                              td 1900 руб.
-                            tr
-                              td Лазерная эпиляция: щеки
-                              td 2900 руб.
-                            tr
-                              td Лазерная эпиляция: верхняя губа
-                              td 1000 руб.
-                            tr
-                              td Лазерная эпиляция: лицо полностью
-                              td 4800 руб.
-                            tr
-                              td Лазерная эпиляция: подбородок
-                              td 1900 руб.
-                            tr
-                              td Лазерная эпиляция: щеки
-                              td 2900 руб.
-                            tr
-                              td Лазерная эпиляция: верхняя губа
-                              td 1000 руб.
+  .card3
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Омоложение
+          .card3__itemInfoContent
+            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+          .card3__priceBtn
+            i.icon-rrubles
+        .innerPriceBox3__wrapper
+          .innerPriceBox3__overlay 
+            .innerPriceBox3.colorBox_e
+              .innerPriceBox3__header
+                .innerPriceBox3__title Лазерная эпиляция Candela
+                .innerPriceBox3__close
+                  i.icon-close2021
+              .innerPriceBox3__content.xScroll2 
+                .priceBox3__area
+                  .priceBox3__title
+                    h3 Название прайса
+                  .priceBox3
+                    table
+                      tbody
+                        tr
+                          td Лазерная эпиляция: подбородок
+                          td 1900 руб.
+                        tr
+                          td Лазерная эпиляция: щеки
+                          td 2900 руб.
+                        tr
+                          td Лазерная эпиляция: верхняя губа
+                          td 1000 руб.
+                        tr
+                          td Лазерная эпиляция: лицо полностью
+                          td 4800 руб.
+                        tr
+                          td Лазерная эпиляция: подбородок
+                          td 1900 руб.
+                        tr
+                          td Лазерная эпиляция: щеки
+                          td 2900 руб.
+                        tr
+                          td Лазерная эпиляция: верхняя губа
+                          td 1000 руб.
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Коррекция фигуры
+          .card3__itemInfoContent
+            p Lorem ipsum dolor sit amet dolor sit amet
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Проблемы кожи
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/hairproblem.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Проблемы с волосами
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/clear.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Очищение кожи
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item(href="")
+        .card3__itemImg
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Удаление волос
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
 
-          
 
 
 
-
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Коррекция фигуры
-              .card3__itemInfoContent
-                p Lorem ipsum dolor sit amet dolor sit amet
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/figura.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Проблемы кожи
-              .card3__itemInfoContent
-                ul
-                  li Лифтинг
-                  li Морщины
-                  li Подтяжка 
-                  li Контур лица
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/hairproblem.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Проблемы с волосами
-              .card3__itemInfoContent
-                ul
-                  li Лифтинг
-                  li Морщины
-                  li Подтяжка 
-                  li Контур лица
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/clear.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Очищение кожи
-              .card3__itemInfoContent
-                ul
-                  li Лифтинг
-                  li Морщины
-                  li Подтяжка 
-                  li Контур лица
-        .card3__itemOuter
-          a.card3__item(href="")
-            .card3__itemImg
-              .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
-            .card3__itemInfo
-              .card3__itemInfoTitle Удаление волос
-              .card3__itemInfoContent
-                ul
-                  li Лифтинг
-                  li Морщины
-                  li Подтяжка 
-                  li Контур лица
+mixin card3_apparatusTpl
+  .card3
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/problem/omolozhenie.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Омоложение
+          .card3__itemInfoContent
+            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/apparatus/01.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Коррекция фигуры
+          .card3__itemInfoContent
+            p Lorem ipsum dolor sit amet dolor sit amet
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/apparatus/02.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Проблемы кожи
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/apparatus/03.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Проблемы с волосами
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/apparatus/04.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Очищение кожи
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
+    .card3__itemOuter
+      a.card3__item_ap(href="")
+        .card3__itemImg_ap
+          .card3__itemImgInner(style="background-image: url(assets/img/apparatus/05.jpg)")
+        .card3__itemInfo
+          .card3__itemInfoTitle Удаление волос
+          .card3__itemInfoContent
+            ul
+              li Лифтинг
+              li Морщины
+              li Подтяжка 
+              li Контур лица
