--- a/src/assets/css/__card.css
+++ b/src/assets/css/__card.css
@@ -26,6 +26,14 @@
   height: 100%;
   transition: all 0.3s;
 }
+.card3__item_ap {
+  text-decoration: none;
+  display: flex;
+  background: #fff;
+  position: relative;
+  height: 100%;
+  transition: all 0.3s;
+}
 
 .card3__item:hover {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08);
@@ -42,6 +50,19 @@
   height: 0;
   display: block;
 }
+
+.card3__itemImg_ap {
+  width: 35%;
+  order: 1;
+  position: relative;
+}
+.card3__itemImg_ap:after {
+  content: "";
+  padding-top: 133%;
+  height: 0;
+  display: block;
+}
+
 .card3__itemImgInner {
   position: absolute;
   top: 0;
@@ -55,6 +76,15 @@
 
 .card3__itemInfo {
   width: 50%;
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 30px;
+  /* align-items: flex-end; */
+}
+
+.card3__itemInfo_ap {
+  width: 65%;
   order: 2;
   display: flex;
   flex-direction: column;
