--- a/src/assets/css/__masters_media.css
+++ b/src/assets/css/__masters_media.css
@@ -18,6 +18,13 @@
 }
 
 @media only screen and (max-width: 920px) {
+  .mastersBox__itemInfo {
+    padding: 20px;
+  }
+  .mastersBox__itemInfoTitle {
+    font-size: 14px;
+    line-height: 1.5;
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -37,6 +44,17 @@
   .mastersBox__info {
     height: 20%;
   }
+
+  .mastersTagMenu__outer {
+    width: 100%;
+    padding: 20px 0;
+  }
+  .menuCategoryMastersLink {
+    padding: 5px 25px;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 2px 5px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -49,6 +67,9 @@
   }
   .mastersBox__info {
     height: 30%;
+  }
+  .mastersBox__itemInfo {
+    padding: 10px;
   }
 }
 
@@ -69,12 +90,15 @@
   .mastersBox__info {
     height: 30%;
   }
+  .mastersTagMenu__outer {
+    padding: 10px 0;
+  }
 }
 
 @media only screen and (max-width: 320px) {
-  /* .mastersBox__itemOuter {
+  .mastersBox__itemOuter {
     width: 100%;
-  } */
+  }
   .mastersBox__info {
     height: 35%;
   }
