--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -31,6 +31,9 @@
 @import "__promoLine.css";
 @import "__promoLine_media.css";
 
+@import "__callback.css";
+@import "__callback_media.css";
+
 @import "__slider1.css";
 @import "__slider1_media.css";
 
