--- a/src/__callback.pug
+++ b/src/__callback.pug
@@ -3,7 +3,7 @@ mixin callback
     i.icon-phone-call
   .callBack__overlay 
     .callBack__area
-      .callBack__form 
+      .callBack__form.animated
         .callBack__close
           i.icon-close2021
         .callback__intro
