left_menu_new_style

--- a/src/__menu.pug
+++ b/src/__menu.pug
@@ -135,78 +135,99 @@ mixin leftMenuSuperTree
           li.lev2
             .lev_a_wrapper
               a.hasInner(href="") Лишний вес
-      li.lev1
+      li.lev1.active
         .lev_a_wrapper
           a.hasInner(href="") Услуги
           .openInner
         ul
-          li.lev2
+          li.lev2.active
             .lev_a_wrapper
               a.hasInner(href="") Аппаратная косметология 
               .openInner
             ul
               li.lev3
-                a(href="") фотоомоложение
+                .lev_a_wrapper
+                  a(href="") фотоомоложение
               li.lev3
-                a(href="") лазерная косметология
-              li.lev3
-                a(href="") список всех процедур
+                .lev_a_wrapper
+                  a(href="") лазерная косметология
+              li.lev3.active
+                .lev_a_wrapper
+                  a(href="") список всех процедур
           li.lev2
             .lev_a_wrapper
               a(href="") Инъекционная косметология
               .openInner
             ul
               li.lev3
-                a(href="") Список всех методик
+                .lev_a_wrapper
+                  a(href="") Список всех методик
           li.lev2
             .lev_a_wrapper
               a.hasInner(href="") Лечебная косметология 
               .openInner
             ul
               li.lev3
-                a(href="") фототерапия в дерматологии
+                .lev_a_wrapper
+                  a(href="") фототерапия в дерматологии
               li.lev3
-                a(href="") лазеротерапия в дерматологии
+                .lev_a_wrapper
+                  a(href="") лазеротерапия в дерматологии
               li.lev3
-                a(href="") подология
+                .lev_a_wrapper
+                  a(href="") подология
               li.lev3
-                a(href="") трихология
+                .lev_a_wrapper
+                  a(href="") трихология
               li.lev3
-                a(href="") лечение храпа
+                .lev_a_wrapper
+                  a(href="") лечение храпа
               li.lev3
-                a(href="") список всех процедур
+                .lev_a_wrapper
+                  a(href="") список всех процедур
           li.lev2
             .lev_a_wrapper
               a.hasInner(href="") Эстетика и уход
               .openInner
             ul
               li.lev3
-                a(href="") список всех процедур
+                .lev_a_wrapper
+                  a(href="") список всех процедур
           li.lev2
             .lev_a_wrapper
               a.hasInner(href="") Имиджевая студия
               .openInner
             ul
               li.lev3
-                a(href="") визаж
+                .lev_a_wrapper
+                  a(href="") визаж
               li.lev3
-                a(href="") стрижка
+                .lev_a_wrapper
+                  a(href="") стрижка
               li.lev3
-                a(href="") окрашивание
+                .lev_a_wrapper
+                  a(href="") окрашивание
               li.lev3
-                a(href="") уход за волосами
+                .lev_a_wrapper
+                  a(href="") уход за волосами
               li.lev3
-                a(href="") укладка
+                .lev_a_wrapper
+                  a(href="") укладка
               li.lev3
-                a(href="") лечение волос (трихология)
+                .lev_a_wrapper
+                  a(href="") лечение волос (трихология)
               li.lev3
-                a(href="") brow bar
+                .lev_a_wrapper
+                  a(href="") brow bar
               li.lev3
-                a(href="") маникюр
+                .lev_a_wrapper
+                  a(href="") маникюр
               li.lev3
-                a(href="") педикюр
+                .lev_a_wrapper
+                  a(href="") педикюр
               li.lev3
-                a(href="") лечение стопы и ногтевой пластины (подология)
+                .lev_a_wrapper
+                  a(href="") лечение стопы и ногтевой пластины (подология)
       li.lev1
         .lev_a_wrapper
           a(href="") Специалисты
