--- a/src/assets/css/__procedure3_media.css
+++ b/src/assets/css/__procedure3_media.css
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 1200px) {
+  .dubleBox3 {
+    padding: 0 10px 0;
+  }
   .procedure3__introOuter {
     padding: 0 10px 0;
   }
@@ -25,6 +28,14 @@
 }
 
 @media only screen and (max-width: 920px) {
+  .dubleBox3__left {
+    display: none;
+  }
+
+  .dubleBox3__right {
+    width: 100%;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 800px) {
