--- a/src/assets/css/__procedure3.css
+++ b/src/assets/css/__procedure3.css
@@ -97,6 +97,26 @@
   margin: 0 auto;
 }
 
+.dubleBox3__area {
+  width: 100%;
+}
+
+.dubleBox3 {
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px auto 0;
+  display: flex;
+}
+
+.dubleBox3__left {
+  width: 20%;
+}
+
+.dubleBox3__right {
+  width: 80%;
+  padding: 0 0 0 20px;
+}
+
 /**************** Слайдер ДО-ПОСЛЕ ******************/
 .imgSlider__area {
   width: 100%;
