--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -358,13 +358,19 @@ li.endLeftBlock {
   display: flex;
   flex-direction: column;
   margin-top: 0.6125rem;
-  border-top: 1px solid var(--bg2);
+  border-top: 1px solid #f2f2f2;
   width: 100%;
+}
+
+.leftMenuProblem {
+  margin-top: 30px;
 }
 
 .leftMenu li.lev1 {
   list-style: none;
 }
+
+/*************************/
 
 .leftMenu li.lev1 > .lev_a_wrapper {
   position: relative;
@@ -377,21 +383,17 @@ li.endLeftBlock {
   width: 100%;
   font-size: 1.125rem;
   line-height: 1.3;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--brick);
   background: #fff;
-  border-bottom: 1px solid var(--bg2);
+  border-bottom: 1px solid #f2f2f2;
   transition: all 0.3s;
   position: relative;
 }
 
-.leftMenu li.lev1 > .lev_a_wrapper:hover > a {
-  background: var(--reden);
+.leftMenu.leftMenuProblem li.lev1 > .lev_a_wrapper a {
   color: #fff;
-}
-
-.leftMenu li.lev1 > .lev_a_wrapper:hover > .openInner:after {
-  color: #fff;
+  background: var(--brick);
 }
 
 .leftMenu li.lev1 > .lev_a_wrapper > .openInner {
@@ -401,9 +403,12 @@ li.endLeftBlock {
   height: 100%;
   width: 30px;
   background: transparent;
-  border-bottom: 1px solid var(--bg2);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: all 0.3s;
+  border-bottom: 1px solid #f2f2f2;
 }
 
 .leftMenu li.lev1 > .lev_a_wrapper > .openInner:after {
@@ -411,20 +416,28 @@ li.endLeftBlock {
   font-family: "icomoon";
   font-size: 1rem;
   color: #000;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0);
-  z-index: 10;
+}
+
+.leftMenu.leftMenuProblem li.lev1 > .lev_a_wrapper > .openInner:after {
+  color: #fff;
+}
+
+.leftMenu li.lev1 > .lev_a_wrapper:hover > a {
+  background: #cecbda;
+}
+.leftMenu.leftMenuProblem li.lev1 > .lev_a_wrapper:hover > a {
+  color: #fff;
+  background: var(--brick);
+  text-decoration: underline;
 }
 
 .leftMenu li.lev1 > .lev_a_wrapper > .openInner:hover {
   background: var(--brick);
 }
-
-.leftMenu li.lev1 > .lev_a_wrapper > .openInner img {
-  height: 100%;
-  width: auto;
+.leftMenu li.lev1 > .lev_a_wrapper > .openInner:hover:after {
+  color: #fff;
+}
+.leftMenu li.lev1 > .lev_a_wrapper:hover > .openInner:after {
 }
 
 .leftMenu li.lev1.active > .lev_a_wrapper > .openInner {
@@ -459,6 +472,7 @@ li.endLeftBlock {
   background: var(--reden);
   border-bottom: 1px solid #fff;
   color: #fff;
+  text-decoration: underline;
 }
 
 /*************************************************/
@@ -472,15 +486,14 @@ li.endLeftBlock {
 
 .leftMenu li.lev2 > .lev_a_wrapper a {
   display: block;
-  padding: 0.625rem 2.25rem 0.625rem 1.25rem;
+  padding: 11px 40px 11px 20px;
   text-decoration: none;
   width: 100%;
   font-size: 1rem;
   line-height: 1.3;
-  color: var(--tc0);
+  color: var(--brick);
   background: #fff;
-  /* background: var(--bg0); */
-  border-bottom: 1px solid var(--bg2);
+  border-bottom: 1px solid #f2f2f2;
   transition: all 0.3s;
   position: relative;
 }
@@ -492,9 +505,12 @@ li.endLeftBlock {
   height: 100%;
   width: 30px;
   background: transparent;
-  border-bottom: 1px solid var(--bg2);
+  border-bottom: 1px solid #f2f2f2;
   cursor: pointer;
   transition: all 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .leftMenu li.lev2 > .lev_a_wrapper > .openInner:after {
@@ -502,32 +518,44 @@ li.endLeftBlock {
   font-family: "icomoon";
   font-size: 1rem;
   color: #000;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0);
-  z-index: 10;
+}
+
+.leftMenu li.lev2 > .lev_a_wrapper:hover > a {
+  /* background: #cecbda; */
+  text-decoration: underline;
 }
 
 .leftMenu li.lev2 > .lev_a_wrapper > .openInner:hover {
-  background: #cecbda;
+  background: var(--brick);
 }
-
-.leftMenu li.lev2 > .lev_a_wrapper > .openInner img {
-  height: 100%;
-  width: auto;
+.leftMenu li.lev2 > .lev_a_wrapper > .openInner:hover:after {
+  color: #fff;
 }
 
 .leftMenu li.lev2.active > .lev_a_wrapper > .openInner {
-  background: var(--reden);
-  border-bottom: 1px solid #fff;
+  color: var(--reden);
+}
+
+.leftMenu li.lev2.active > .lev_a_wrapper > .openInner:after {
+  color: var(--reden);
+}
+
+.leftMenu li.lev2.active > .lev_a_wrapper > a:hover {
+  text-decoration: underline;
+}
+
+.leftMenu li.lev2.active > .lev_a_wrapper > .openInner {
+  background: transparent;
+}
+
+.leftMenu li.lev2.active > .lev_a_wrapper > .openInner:after {
+  color: var(--reden);
 }
 
 .leftMenu li.lev2.active > .lev_a_wrapper > .openInner:hover {
   background: var(--brick);
 }
-
-.leftMenu li.lev2.active > .lev_a_wrapper > .openInner:after {
+.leftMenu li.lev2.active > .lev_a_wrapper > .openInner:hover:after {
   color: #fff;
 }
 
@@ -540,20 +568,9 @@ li.endLeftBlock {
 }
 
 .leftMenu li.lev2.active > .lev_a_wrapper > a {
-  background: var(--reden);
-  border-bottom: 1px solid #fff;
-  color: #fff;
-}
-
-.leftMenu li.lev2 > .lev_a_wrapper > a:hover {
-  /* background: var(--x1greyLight); */
-  background: #cecbda;
-}
-
-.leftMenu li.lev2.active > .lev_a_wrapper > a:hover {
-  background: var(--reden);
-  border-bottom: 1px solid #fff;
-  color: #fff;
+  background: #fff;
+  color: var(--reden);
+  font-weight: 700;
 }
 
 /*******************************************************/
@@ -574,14 +591,14 @@ li.endLeftBlock {
   line-height: 1.3;
   color: var(--tc0);
   background: #fffefe;
-  border-bottom: 1px solid var(--bg2);
+  border-bottom: 1px solid #f2f2f2;
   transition: all 0.3s;
   position: relative;
 }
 
 .leftMenu li.lev3.active > .lev_a_wrapper a {
-  background: var(--reden);
-  color: #fff;
+  color: var(--reden);
+  font-weight: 600;
 }
 
 .leftMenu li.lev3 > .lev_a_wrapper a:before {
@@ -598,15 +615,16 @@ li.endLeftBlock {
 }
 
 .leftMenu li.lev3.active > .lev_a_wrapper a:before {
-  background: #fff;
+  background: var(--reden);
 }
 
 .leftMenu li.lev3 > .lev_a_wrapper a:hover {
-  background: #cecbda;
+  /* background: #cecbda; */
+  text-decoration: underline;
 }
 
 .leftMenu li.lev3.active > .lev_a_wrapper a:hover {
-  background: var(--reden);
+  text-decoration: underline;
 }
 
 .leftMenu li span {
