--- a/src/__card.pug
+++ b/src/__card.pug
@@ -181,3 +181,67 @@ mixin card3_apparatusTpl
               li Морщины
               li Подтяжка 
               li Контур лица
+
+
+mixin eCard 
+  .eCard
+    .eCard__itemOuter
+      a.eCard__item(href="#")
+        .eCard__itemInner
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/clear.jpg)")
+          .eCard__itemInnerRight
+            .eCard__itemTitle Омоложение
+            .eCard__itemContent
+              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
+              ul
+                li Лифтинг
+                li Морщины
+                li Подтяжка 
+                li Контур лица
+          .card3__priceBtn
+            i.icon-rrubles
+          .innerPriceBox3__wrapper
+            .innerPriceBox3__overlay 
+              .innerPriceBox3.colorBox_e
+                .innerPriceBox3__header
+                  .innerPriceBox3__title Лазерная эпиляция Candela
+                  .innerPriceBox3__close
+                    i.icon-close2021
+                .innerPriceBox3__content.xScroll2 
+                  .priceBox3__area
+                    .priceBox3__title
+                      h3 Название прайса
+                    .priceBox3
+                      table
+                        tbody
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+                          tr
+                            td Лазерная эпиляция: лицо полностью
+                            td 4800 руб.
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+    .eCard__itemOuter
+      a.eCard__item(href="#")
+        .eCard__itemInner
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/epil.jpg)")
+          .eCard__itemInnerRight
+            .eCard__itemTitle Омоложение
+            .eCard__itemContent
+              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
+              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet.
+
