--- a/src/a_razdel_v3.pug
+++ b/src/a_razdel_v3.pug
@@ -40,6 +40,7 @@ html(lang="ru-RU")
           .title3
               h2 Популярные процедуры  
           +card3
+          +eCard
       //- +mainProblem
       //- +sliderSwiperInMain
       //- +testBlock
