--- a/src/a_razdel_v3.pug
+++ b/src/a_razdel_v3.pug
@@ -39,7 +39,7 @@ html(lang="ru-RU")
         .wideBox3
           .title3
               h2 Популярные процедуры  
-          +card3
+          //- +card3
           +eCard
       //- +mainProblem
       //- +sliderSwiperInMain
