--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,9 +7,8 @@ body {
   line-height: 1.2;
   position: relative;
   height: 100%;
-  /* background: #f3f2f2; */
+  /* background: #fafafa; */
   background: #fafafa;
-  /* background: var(--bg0); */
   display: flex;
   flex-direction: column;
 }
