--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -75,7 +75,7 @@
   } */
   .site__center {
     position: relative;
-    padding: 5px 0 15px;
+    padding: 0 0 15px;
   }
   .content ul li {
     margin: 0 0 0.75rem 0;
