--- a/src/__card.pug
+++ b/src/__card.pug
@@ -188,16 +188,16 @@ mixin eCard
     .eCard__itemOuter
       a.eCard__item(href="#")
         .eCard__itemInner
-          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/clear.jpg)")
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/01.jpg)")
           .eCard__itemInnerRight
             .eCard__itemTitle Омоложение
             .eCard__itemContent
-              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
+              p Инъекции на основе гиалуроновой кислоты. Улучшают качество кожи, разглаживают морщины
               ul
-                li Лифтинг
-                li Морщины
-                li Подтяжка 
-                li Контур лица
+                li Мезоскульпт
+                li Новакутан
+                li Профайло 
+                li ИАЛ
           .card3__priceBtn
             i.icon-rrubles
           .innerPriceBox3__wrapper
@@ -238,10 +238,151 @@ mixin eCard
     .eCard__itemOuter
       a.eCard__item(href="#")
         .eCard__itemInner
-          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/epil.jpg)")
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/02.jpg)")
           .eCard__itemInnerRight
             .eCard__itemTitle Омоложение
             .eCard__itemContent
-              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cum!
-              p Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet.
-
+              p Безоперационная подтяжка лица и тела.
+              ul
+                li Ulthera System (SMAS)
+                li Liftera-A (SMAS)
+                li Venus Legacy (RF)
+                li M22 Lumenis
+                li MJoule BBL HERO
+                li EmSculpt
+                li Scarlet S (RF иглами)
+          .card3__priceBtn
+            i.icon-rrubles
+          .innerPriceBox3__wrapper
+            .innerPriceBox3__overlay 
+              .innerPriceBox3.colorBox_e
+                .innerPriceBox3__header
+                  .innerPriceBox3__title Лазерная эпиляция Candela
+                  .innerPriceBox3__close
+                    i.icon-close2021
+                .innerPriceBox3__content.xScroll2 
+                  .priceBox3__area
+                    .priceBox3__title
+                      h3 Название прайса
+                    .priceBox3
+                      table
+                        tbody
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+                          tr
+                            td Лазерная эпиляция: лицо полностью
+                            td 4800 руб.
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+    .eCard__itemOuter
+      a.eCard__item(href="#")
+        .eCard__itemInner
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/03.jpg)")
+          .eCard__itemInnerRight
+            .eCard__itemTitle Омоложение
+            .eCard__itemContent
+              p Безоперационная подтяжка лица и тела.
+              ul
+                li Ulthera System (SMAS)
+                li Liftera-A (SMAS)
+                li Venus Legacy (RF)
+                li M22 Lumenis
+                li MJoule BBL HERO
+                li EmSculpt
+                li Scarlet S (RF иглами)
+          .card3__priceBtn
+            i.icon-rrubles
+          .innerPriceBox3__wrapper
+            .innerPriceBox3__overlay 
+              .innerPriceBox3.colorBox_e
+                .innerPriceBox3__header
+                  .innerPriceBox3__title Лазерная эпиляция Candela
+                  .innerPriceBox3__close
+                    i.icon-close2021
+                .innerPriceBox3__content.xScroll2 
+                  .priceBox3__area
+                    .priceBox3__title
+                      h3 Название прайса
+                    .priceBox3
+                      table
+                        tbody
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+                          tr
+                            td Лазерная эпиляция: лицо полностью
+                            td 4800 руб.
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+    .eCard__itemOuter
+      a.eCard__item(href="#")
+        .eCard__itemInner
+          .eCard__itemInnerLeft(style="background-image: url(assets/img/problem/04.jpg)")
+          .eCard__itemInnerRight
+            .eCard__itemTitle BBL HERO: лечение сосудистых патологий
+            .eCard__itemContent
+              p Фототерапия на аппарате M Joule с инновационным модулем BBL HERO: сосудистые патологии на лице (в т.ч. розацеа, купероз) и теле (в т.ч. ангиомы)
+          .card3__priceBtn
+            i.icon-rrubles
+          .innerPriceBox3__wrapper
+            .innerPriceBox3__overlay 
+              .innerPriceBox3.colorBox_e
+                .innerPriceBox3__header
+                  .innerPriceBox3__title Лазерная эпиляция Candela
+                  .innerPriceBox3__close
+                    i.icon-close2021
+                .innerPriceBox3__content.xScroll2 
+                  .priceBox3__area
+                    .priceBox3__title
+                      h3 Название прайса
+                    .priceBox3
+                      table
+                        tbody
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
+                          tr
+                            td Лазерная эпиляция: лицо полностью
+                            td 4800 руб.
+                          tr
+                            td Лазерная эпиляция: подбородок
+                            td 1900 руб.
+                          tr
+                            td Лазерная эпиляция: щеки
+                            td 2900 руб.
+                          tr
+                            td Лазерная эпиляция: верхняя губа
+                            td 1000 руб.
