--- a/src/assets/css/__breadcrumbs-media.css
+++ b/src/assets/css/__breadcrumbs-media.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 1200px) {
-  .breadcrumbs3__area {
+  /* .breadcrumbs3__area {
     padding: 30px 0 20px;
-  }
+  } */
 }
 
 @media only screen and (max-width: 1140px) {
@@ -14,27 +14,27 @@
 }
 
 @media only screen and (max-width: 920px) {
-  .breadcrumbs3__area {
+  /* .breadcrumbs3__area {
     padding: 20px 0 20px;
-  }
+  } */
 }
 
 @media only screen and (max-width: 800px) {
 }
 
 @media only screen and (max-width: 768px) {
-  .breadcrumbs3__area {
+  /* .breadcrumbs3__area {
     padding: 15px 0 15px;
-  }
+  } */
 }
 
 @media only screen and (max-width: 600px) {
 }
 
 @media only screen and (max-width: 480px) {
-  .breadcrumbs3__area {
+  /* .breadcrumbs3__area {
     padding: 10px 0 10px;
-  }
+  } */
   .backBtn3 i {
     font-size: 0.875rem;
     line-height: 1.125rem;
