--- a/src/assets/css/__card.css
+++ b/src/assets/css/__card.css
@@ -163,7 +163,7 @@
 }
 
 .card3__priceBtn i {
-  color: #bdbdbd;
+  color: var(--brick);
   font-size: 2rem;
   transition: all 0.3s;
 }
@@ -256,7 +256,8 @@
 
 .eCard__item {
   width: 100%;
-  padding-top: 48%;
+  /* padding-top: 48%; */
+  padding-top: 57%;
   position: relative;
   box-shadow: 0px 6px 15px rgb(0 0 0 / 8%);
   text-decoration: none;
@@ -279,7 +280,8 @@
 }
 
 .eCard__itemInnerLeft {
-  width: 40%;
+  /* width: 40%; */
+  width: 44%;
   height: 100%;
   background-position: center center;
   background-repeat: no-repeat;
@@ -287,7 +289,8 @@
 }
 
 .eCard__itemInnerRight {
-  width: 60%;
+  /* width: 60%; */
+  width: 56%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -297,8 +300,8 @@
 
 .eCard__itemTitle {
   font-weight: bold;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 16px;
+  line-height: 1.3;
   color: var(--dark);
 }
 
@@ -309,7 +312,7 @@
 }
 
 .eCard__itemContent p {
-  font-size: 0.875rem;
+  font-size: 14px;
   line-height: 1.4;
   color: var(--dark);
   margin-bottom: 10px;
@@ -317,13 +320,13 @@
 
 .eCard__itemContent ul {
   padding: 0;
+  padding: 0 0 0 5px;
   list-style: none;
 }
 
 .eCard__itemContent li {
   color: var(--dark);
-  font-weight: 600;
-  font-size: 0.875rem;
-  line-height: 1.4;
+  font-size: 14px;
+  line-height: 1.3;
   color: var(--dark);
 }
