--- a/src/assets/css/__news.css
+++ b/src/assets/css/__news.css
@@ -126,6 +126,7 @@
   text-decoration: none;
   height: 100%;
   transition: all 0.3s;
+  background: #fff;
 }
 .blogSliderItem:hover {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08);
