--- a/src/leftmenu3.pug
+++ b/src/leftmenu3.pug
@@ -6,6 +6,7 @@ include __const
 include __card
 include __header3
 include __menu
+include __eShopMenu
 include __mainTop
 include __mainProblem
 include __breadcrumbs
@@ -36,7 +37,8 @@ body
     .dubleBox3__area 
       .dubleBox3
         .dubleBox3__left 
-          +leftMenuSuperTree
+          //- +leftMenuSuperTree
+          +eShopMenu
         .dubleBox3__right
           .title0 
             h1 Заголовок страницы
