--- a/src/assets/css/__callback.css
+++ b/src/assets/css/__callback.css
@@ -1,6 +1,5 @@
 .callBackBtn {
   position: fixed;
-  /* left: 3rem; */
   right: 3rem;
   top: 50%;
   margin-top: -2rem;
@@ -12,9 +11,11 @@
   align-items: center;
   border-radius: 3rem;
   border: 2px solid #fff;
-  /* box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); */
   box-shadow: 0px 0px 20px 5px rgba(58, 0, 54, 0.21);
-  animation: d 1.5s linear infinite;
+
+  -webkit-animation: b 1.5s infinite;
+  animation: b 1.5s infinite;
+
   transition: all 0.3s;
   cursor: pointer;
   z-index: 1000;
@@ -30,7 +31,22 @@
   top: 120px;
 }
 
-@keyframes d {
+@-webkit-keyframes b {
+  0% {
+    opacity: 1;
+    background: var(--brick);
+  }
+  50% {
+    opacity: 0.9;
+    background: var(--reden);
+  }
+  to {
+    opacity: 1;
+    background: var(--brick);
+  }
+}
+
+@keyframes b {
   0% {
     opacity: 1;
     background: var(--brick);
