--- a/src/assets/css/__master_media.css
+++ b/src/assets/css/__master_media.css
@@ -44,6 +44,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     padding: 0 0 20px 0;
   }
   .master3__topContentRight {
