--- a/src/assets/css/__procedure3_media.css
+++ b/src/assets/css/__procedure3_media.css
@@ -170,8 +170,11 @@
   }
   .price3__area {
     margin: 20px auto;
-    padding: 20px 20px;
+    padding: 20px 10px;
     width: 100%;
+  }
+  .priceBox3 table td {
+    font-size: 11px;
   }
 }
 
