--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -29,7 +29,7 @@
 @import "__menu_media.css";
 
 @import "__promoLine.css";
-@import "__promoLine_media.css";
+/* @import "__promoLine_media.css"; */
 
 @import "__callback.css";
 @import "__callback_media.css";
@@ -96,7 +96,7 @@
 @import "__mbMenu.css";
 @import "__mbMenu_media.css";
 
-@import "__index2.css";
+/* @import "__index2.css"; */
 @import "__index2_media.css";
 
 @import "__mainTop2.css";
@@ -110,6 +110,9 @@
 
 @import "__menuBottom1.css";
 @import "__menuBottom1_media.css";
+
+@import "__eShopMenu.css";
+@import "__eShopMenu_media.css";
 
 /* в самом низу */
 @import "main.css";
